[package]
name = "zip-extract"
version = "0.1.2"
authors = ["M*C*O <mcofficer@gmx.de>"]
edition = "2018"
license = "MIT"
description = "Archive extraction via zip-rs, automated."
repository = "https://github.com/MCOfficer/zip-extract"
keywords = ["zip", "archive", "extract"]
categories = ["compression"]

[features]
aes-crypto = ["zip/aes-crypto"]
deflate = ["zip/deflate"]
deflate64 = ["zip/deflate64"]
deflate-miniz = ["zip/deflate-miniz"]
deflate-zlib = ["zip/deflate-zlib"]
unreserved = ["zip/unreserved"]
bzip2 = ["zip/bzip2"]
time = ["zip/time"]
zstd = ["zip/zstd"]
default = ["aes-crypto", "bzip2", "deflate", "deflate64", "zstd"]

[dependencies]
log = "0.4"
zip = { version = "2" }
encoding_rs = "0.8"
thiserror = "1"

[dev-dependencies]
cute-log = { version = "2.0.7", default_features = false }
dir-diff = "0.3.3"
tempfile = "3.10.1"
